force-app/main/default/objects/Activity/fields/Interview_Format__c.field-meta.xml
<CustomField>
    <fullName>Interview_Format__c</fullName>
    <label>Interview Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behavioural</fullName>
            </value>
            <value>
                <fullName>Competency</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Informal</fullName>
            </value>
            <value>
                <fullName>Panel</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Traditional 1:1</fullName>
            </value>
            <value>
                <fullName>Video/Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>