force-app/main/default/objects/Activity/fields/Interview_Type__c.field-meta.xml
<CustomField>
    <fullName>Interview_Type__c</fullName>
    <description>Relates to the Event Object, to capture additional information about a Job Interview</description>
    <label>Interview Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Executive(C-Suite)</fullName>
            </value>
            <value>
                <fullName>Follow up</fullName>
            </value>
            <value>
                <fullName>Hiring Manager</fullName>
            </value>
            <value>
                <fullName>Panel</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>