force-app/main/default/objects/Activity/fields/Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Interviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>